# glass-furnace-modeling

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
docs/figures/: generate_schematic.py
glass_melter_level/: __init__.py  config.py
glass_melter_level/data/: __init__.py  loader.py  preprocessing.py  scenario_generation.py
glass_melter_level/evaluation/: __init__.py  metrics.py
glass_melter_level/models/: __init__.py  neural_ode.py  physics.py
glass_melter_level/training/: __init__.py  trainer.py  trajectory.py
glass_melter_level/visualization/: __init__.py  plots.py  style.py
notebooks/: glass_melter_level_modeling.ipynb
scripts/: evaluate.py  train_v1.py  train_v2.py  train_v3.py
trained_models/: neural_ode_v1_glass_melter.pt  neural_ode_v2_glass_melter.pt
